HADOOP-1553.  Simplify and speed up saving of user task's output and logs. (omalley)
git-svn-id: https://svn.apache.org/repos/asf/lucene/hadoop/trunk@563300 13f79535-47bb-0310-9956-ffa450edef68